# smart_labeler

./: .gitignore  README.md  manage.py  pyproject.toml
authentication/: admin.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
authentication/templates/authentication/: index.html  post-login.html
labeler/: admin.py  models.py  urls.py  views.py
labeler/migrations/: 0001_initial.py  0002_alter_webmedia_media.py
labeler/static/js/: label.js
labeler/templates/about/: index.html
labeler/templates/label/: index.html  label-detail.html
labeler/templates/upload/: index.html
labeler/templatetags/: convert_to_img.py
smart_labeler/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
static/css/: app.css
static/js/: bootstrap.min.js  konva.min.js
templates/: 404.html  base.html  logout.html
