[tool.poetry]
name = "smart-labeler"
version = "0.1.0"
description = "Smart Labeler Application"
authors = ["developer <developer@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_labeler"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
jsonfield = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
